--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@agoric/wallet": "^0.13.1",
+    "@agoric/web-components": "^0.2.0",
+    "@endo/eventual-send": "^0.16.0",
     "@endo/init": "0.5.43",
+    "@headlessui/react": "^1.6.6",
+    "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
     "@vitejs/plugin-react": "^2.0.1",
     "autoprefixer": "^10.4.8",
+    "clsx": "^1.2.1",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -32,8 +38,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "framer-motion": "^7.2.1",
+    "jotai": "^1.8.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.2.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
