--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@agoric/notifier": "^0.4.0",
     "@agoric/wallet": "^0.13.1",
     "@agoric/web-components": "^0.2.0",
     "@endo/eventual-send": "^0.16.0",
