--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@agoric/ui-components": "^0.2.33",
     "@agoric/wallet": "^0.13.1",
     "@agoric/web-components": "^0.2.0",
+    "@agoric/zoe": "0.24.0",
     "@endo/eventual-send": "^0.16.0",
     "@endo/init": "0.5.43",
     "@headlessui/react": "^1.6.6",
@@ -46,6 +47,7 @@
     "prettier": "^2.7.1",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.2.0",
+    "react-toastify": "^9.0.8",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
