--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "devDependencies": {
     "@agoric/casting": "dev",
-    "@agoric/ertp": "^0.14.2",
-    "@agoric/ui-components": "^0.2.33",
-    "@agoric/web-components": "0.5.1-dev-a4976a7.0",
-    "@agoric/zoe": "0.24.0",
+    "@agoric/ertp": "dev",
+    "@agoric/ui-components": "dev",
+    "@agoric/web-components": "dev",
+    "@agoric/zoe": "dev",
     "@endo/eventual-send": "^0.16.0",
-    "@endo/init": "0.5.43",
+    "@endo/init": "^0.5.43",
     "@headlessui/react": "^1.6.6",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
