chore: yarn upgrade  --scope @agoric

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@agoric/casting": "dev",
-    "@agoric/ertp": "dev",
-    "@agoric/ui-components": "dev",
-    "@agoric/web-components": "dev",
-    "@agoric/zoe": "dev",
+    "@agoric/casting": "^0.3.3-dev-f5341af.0",
+    "@agoric/ertp": "^0.15.4-dev-f5341af.0",
+    "@agoric/ui-components": "^0.3.4-dev-f5341af.0",
+    "@agoric/web-components": "^0.5.1-dev-f5341af.0",
+    "@agoric/zoe": "^0.25.4-dev-f5341af.0",
     "@endo/eventual-send": "^0.16.0",
     "@endo/init": "^0.5.43",
     "@headlessui/react": "^1.6.6",
