--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@agoric/web-components": "^0.5.1-dev-f5341af.0",
     "@agoric/zoe": "^0.25.4-dev-f5341af.0",
     "@endo/eventual-send": "^0.16.0",
-    "@endo/init": "^0.5.43",
+    "@endo/init": "^0.5.53",
     "@headlessui/react": "^1.6.6",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
@@ -45,6 +45,7 @@
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.2.0",
     "react-toastify": "^9.0.8",
+    "ses": "^0.18.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
